--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,9 +1,12 @@
 /*Importo estilos*/
 @import "./layout/header";
 @import "./layout/media/media480";
+@import "./layout/media/media576px";
 @import "./layout/media/media768";
+@import "./layout/media/media992px";
 @import "./layout/categorias";
 @import "./layout/banner";
 @import "./layout/marcas";
 @import "./layout/nuevosLanzamientos";
 @import "./layout/pieDePagina";
+@import "./layout/producto";
