--- a/scss/layout/media/_media768.scss
+++ b/scss/layout/media/_media768.scss
@@ -86,4 +86,61 @@
   .contenedorLogoPiePagina img {
     width: 40%; /* Reduce el tamaño del logo */
   }
+
+  .contenedorProducto {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .contenedorImagenesProducto {
+      flex-direction: row;
+      justify-content: center;
+      gap: 5px;
+
+      img {
+        width: 25%;
+      }
+    }
+
+    .contenedorImagenPrincipal {
+      img {
+        width: 100%;
+      }
+    }
+
+    .contenedorDetalle {
+      text-align: center;
+      width: 100%;
+    }
+
+    .contenedorTalle {
+      justify-content: center;
+    }
+
+    .contenedorCantidad {
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .contenedorMetodosPagos {
+      text-align: center;
+    }
+
+    .contenedorPromociones {
+      justify-content: center;
+    }
+
+    // Establecer texto más pequeño en pantallas pequeñas
+    p,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6,
+    span,
+    a {
+      font-size: 0.9rem; // Puedes ajustar este valor según tus necesidades
+    }
+  }
 }
