--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,3 +10,4 @@
 @import "./layout/nuevosLanzamientos";
 @import "./layout/pieDePagina";
 @import "./layout/producto";
+@import "./layout/sugerencia";
