--- a/scss/layout/_mainRegistro.scss
+++ b/scss/layout/_mainRegistro.scss
@@ -26,7 +26,8 @@
     width: 90%;
     background-color: #ffffff;
     padding-top: 30px;
-    padding-left: 40px;
+    padding-left: 35px;
+    padding-right: 9px;
     padding-bottom: 40px;
   
     input {
