Cambios en inicioSesion.html

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,3 +12,5 @@
 @import "./layout/producto";
 @import "./layout/sugerencia";
 @import "./layout/mainRegistro";
+@import "./base/reset";
+@import "./base/tipografias";
