--- a/css/style.css
+++ b/css/style.css
@@ -693,4 +693,20 @@
   text-align: center;
 }
 
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+
+/*Estilo Fuente*/
+a,
+p {
+  font-family: "Open Sans", serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
+}
+
 /*# sourceMappingURL=style.css.map */
