--- a/css/style.css
+++ b/css/style.css
@@ -303,6 +303,24 @@
   }
 }
 /* Media Queries */
+@media (min-width: 768px) {
+  .main-container {
+    flex-direction: row;
+    gap: 40px;
+  }
+  .banner {
+    flex: 1;
+  }
+  .products {
+    flex: 3;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  }
+  .product img {
+    width: 100%;
+    height: 150px;
+  }
+}
+/* Media Queries */
 @media (max-width: 992px) {
   .contenedorProducto {
     grid-template-columns: 1fr;
