--- a/scss/layout/media/_media768.scss
+++ b/scss/layout/media/_media768.scss
@@ -157,3 +157,25 @@
     }
   }
 }
+
+/* Media Queries */
+@media (min-width: 768px) {
+  .main-container {
+    flex-direction: row;
+    gap: 40px;
+  }
+
+  .banner {
+    flex: 1;
+  }
+
+  .products {
+    flex: 3;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  }
+
+  .product img {
+    width: 100%;
+    height: 150px;
+  }
+}
