--- a/scss/layout/media/_media576px.scss
+++ b/scss/layout/media/_media576px.scss
@@ -31,4 +31,16 @@
     flex-direction: column; // Botones y cantidad apilados
     gap: 5px;
   }
+
+  .product h3 {
+    font-size: 16px;
+  }
+
+  .product p {
+    font-size: 14px;
+  }
+
+  .product {
+    padding: 8px;
+  }
 }
