--- a/scss/layout/_nuevosLanzamientos.scss
+++ b/scss/layout/_nuevosLanzamientos.scss
@@ -24,7 +24,7 @@
   .products {
     flex: 3;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300xpx, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 20px;
   }
 
