Cambios en _pieDePagina.scss

--- a/css/style.css
+++ b/css/style.css
@@ -542,7 +542,7 @@
 /*Pie de pagina*/
 .pieDePagina {
   width: 100%;
-  height: auto; /* Cambiado a auto para que se adapte a contenidos */
+  height: 200px; /* Cambiado a auto para que se adapte a contenidos */
   background-color: #949494;
   display: flex;
   flex-wrap: wrap; /* Permite que los elementos salten a la siguiente fila en pantallas pequeñas */
@@ -811,6 +811,7 @@ p {
 .contenedorTextoCarrito {
   width: 90%;
   margin-left: 5%;
+  margin-top: 3%;
   background-color: #ffffff;
   padding: 20px 0;
 }
