--- a/scss/layout/_carrito.scss
+++ b/scss/layout/_carrito.scss
@@ -1,6 +1,9 @@
+
+
 .contenedorTextoCarrito {
   width: 90%; // Ocupa todo el ancho en móviles
   margin-left: 5%;
+  margin-top: 3%;
   background-color: #ffffff;
   padding: 20px 0; // Espaciado interno arriba y abajo
 
