--- a/scss/layout/_pieDePagina.scss
+++ b/scss/layout/_pieDePagina.scss
@@ -2,7 +2,7 @@
 
 .pieDePagina {
   width: 100%;
-  height: auto; /* Cambiado a auto para que se adapte a contenidos */
+  height: 200px; /* Cambiado a auto para que se adapte a contenidos */
   background-color: #949494;
   display: flex;
   flex-wrap: wrap; /* Permite que los elementos salten a la siguiente fila en pantallas pequeñas */
