--- a/scss/layout/media/_media768.scss
+++ b/scss/layout/media/_media768.scss
@@ -159,9 +159,14 @@
   .mainRegistro {
     display: flex;
     justify-content: center;
+   
+    background-color: rgb(255, 255, 255);
 
     .contenedorFormulario {
       width: 90%;
+      margin-top: 75px;
+      margin-bottom: 75px;
+      
       .contenedorBotonesRegistro {
         width: 70%;
         gap: 10px;
